tests/invalid/generic_export_instantiate_non_abi_safe.wio
@Export
@Instantiate(string)
fn Accept<T>(value: T) {
}
